# vibeisland-linux

./: .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
crates/agents/: Cargo.toml
crates/agents/src/: claude_code.rs  event.rs  lib.rs  response.rs  session_store.rs  watcher.rs
crates/sound/: Cargo.toml
crates/sound/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: lib.rs
docs/: architecture.md  brief.md  research.md  roadmap.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hook.rs  ipc.rs  lib.rs  main.rs
src-tauri/tests/: e2e_smoke.rs
src/components/: AgentCard.tsx  ApprovalPrompt.tsx  OverlayPanel.tsx
src/hooks/: useAgentState.ts
src/types/: agent.ts
