[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/agents",
    "crates/terminal",
    "crates/sound",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jay Isamot"]
license = "MIT"
repository = "https://github.com/jayisamot/vibeisland-linux"
rust-version = "1.77"

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

vibeisland-agents = { path = "crates/agents" }
vibeisland-terminal = { path = "crates/terminal" }
vibeisland-sound = { path = "crates/sound" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev]
incremental = true
