[package]
name = "vibeisland-terminal"
description = "Terminal window locators (GNOME Terminal, Konsole, Kitty, Alacritty, ...)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
